--- a/App.VecinosUY/app/src/main/res/values/strings.xml
+++ b/App.VecinosUY/app/src/main/res/values/strings.xml
@@ -12,10 +12,10 @@
     <string name="annauncement">"Anuncios"</string>
     <string name="meeting">"Reuniones"</string>
     <string name="vote">"Votaciones"</string>
-    <string name="reserve">"Reserva"</string>
-    <string name="agenda">"Agenda"</string>
+    <string name="reserve">"Reserva de Servicios"</string>
+    <string name="agenda">"Agenda de Contactos"</string>
     <string name="vecinosUySessionToken">vecinosUySessionToken</string>
-    <string name="serverAddr">http://192.168.0.105:45455/api/</string>
+    <string name="serverAddr">http://192.168.59.2:45455/api/</string>
     <string name="title_activity_announcement">AnnouncementActivity</string>
     <string name="title_activity_to_delete">toDeleteActivity</string>
     <string name="title_activity_borrar">BORRARActivity</string>
