--- a/App.VecinosUY/app/src/main/res/values/strings.xml
+++ b/App.VecinosUY/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="title_activity_to_delete">toDeleteActivity</string>
     <string name="title_activity_borrar">BORRARActivity</string>
     <string name="facebook_app_id">1793451820969927</string>
+    <string name="connError">No disponible sin conn</string>
 </resources>
